--- a/CartService/pom.xml
+++ b/CartService/pom.xml
@@ -8,12 +8,11 @@
         <version>2.2.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.project1</groupId>
-    <artifactId>User Service</artifactId>
+    <groupId>com.porject2</groupId>
+    <artifactId>cart</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>user</name>
-    <description>UserService</description>
-
+    <name>cart</name>
+    <description>Cart Microservice</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -55,8 +54,6 @@
             <artifactId>spring-boot-devtools</artifactId>
             <version>2.2.0.RELEASE</version>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.projectlombok</groupId>
