--- a/CreditCardService/pom.xml
+++ b/CreditCardService/pom.xml
@@ -8,16 +8,15 @@
         <version>2.2.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.project1</groupId>
-    <artifactId>User Service</artifactId>
+    <groupId>com.project2</groupId>
+    <artifactId>creditcard</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>user</name>
-    <description>UserService</description>
+    <name>creditcard</name>
+    <description>Credit Card Service</description>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -55,8 +54,6 @@
             <artifactId>spring-boot-devtools</artifactId>
             <version>2.2.0.RELEASE</version>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.projectlombok</groupId>
