--- a/PaymentService/pom.xml
+++ b/PaymentService/pom.xml
@@ -8,11 +8,11 @@
         <version>2.2.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.project1</groupId>
-    <artifactId>User Service</artifactId>
+    <groupId>com.project2</groupId>
+    <artifactId>payment</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>user</name>
-    <description>UserService</description>
+    <name>payment</name>
+    <description>Payment Service</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -55,8 +55,6 @@
             <artifactId>spring-boot-devtools</artifactId>
             <version>2.2.0.RELEASE</version>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.projectlombok</groupId>
