--- a/AuthService/k8s-secrets.yaml
+++ b/AuthService/k8s-secrets.yaml
@@ -5,5 +5,5 @@ metadata:
 type: Opaque
 data:
   service-api-key: czVEVWFyVWwmYlRAWEcqTEtGTmkzVzI=
-  mysql-root-password: cGFzc3dvcmQ=  #password
+  mysql-root-password: cGFzc3dvcmQ=
 
