--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -4,15 +4,15 @@ jwtSecret=secret
 jwtExpiration=86400
 
 
-server.port=8081
+server.port=8080
 
 
 spring.batch.initialize-schema=always
 #=======================================
 ##Using MySQL database
-spring.datasource.url=jdbc:mysql://localhost/authdb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://polling-app-mysql/authdb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
