--- a/BankService/k8s-secrets.yaml
+++ b/BankService/k8s-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: authservice-secrets
+  name: bankservice-secrets
 type: Opaque
 data:
   service-api-key: czVEVWFyVWwmYlRAWEcqTEtGTmkzVzI=
