--- a/CartService/k8s-deployment.yaml
+++ b/CartService/k8s-deployment.yaml
@@ -1,44 +1,44 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: authservice-deployment
+  name: cartservice-deployment
   labels:
-    app: authservice
+    app: cartservice
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: authservice
+      app: cartservice
   template:
     metadata:
       labels:
-        app: authservice
+        app: cartservice
 
     spec:
       containers:
-        - name: authservice
-          image: timnuwa/authservice:latest
+        - name: cartservice
+          image: timnuwa/cartservice:latest
           ports:
             - containerPort: 8093
           env:
             - name: KEY1
               valueFrom:
                 configMapKeyRef:
-                  name: authservice-config
+                  name: cartservice-config
                   key: someKey1
             - name: NEXT_SERVICE
               valueFrom:
                 configMapKeyRef:
-                  name: authservice-config
+                  name: cartservice-config
                   key: nextService
             - name: SERVICE_API_KEY
               valueFrom:
                 secretKeyRef:
-                  name: authservice-secrets
+                  name: cartservice-secrets
                   key: service-api-key
             #MYSQL
             - name: MYSQL_HOST
-              value: authservice-db
+              value: cartservice-db
 
             - name: MYSQL_USER
               value: root
@@ -48,5 +48,5 @@ spec:
             - name: MYSQL_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: authservice-secrets
+                  name: cartservice-secrets
                   key: mysql-root-password
