--- a/CartService/k8s-persistence-volumn.yaml
+++ b/CartService/k8s-persistence-volumn.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: authservice-pv-volume
+  name: cartservice-pv-volume
   labels:
     type: local
 spec:
@@ -16,7 +16,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: authservice-pv-claim
+  name: cartservice-pv-claim
 spec:
   storageClassName: manual
   accessModes:
