--- a/CartService/k8s-service.yaml
+++ b/CartService/k8s-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: authservice
+  name: cartservice
 spec:
   type: NodePort
   selector:
-    app: authservice
+    app: cartservice
   ports:
     - protocol: TCP
       port: 80
