--- a/client/makefile
+++ b/client/makefile
@@ -2,21 +2,6 @@
 
 containerID := $(shell docker ps -a -q --filter ancestor=timnuwa/clientservice:latest)
 
-#===================  Maven  ===========================
-clean:
-	./mvnw clean
-build: clean
-	./mvnw install
-run-local: build
-	java -jar target/clientservice-*.jar
-# #===================  gradle  ===========================
-# clean:
-# 	./gradlew clean
-# build: clean
-# 	./gradlew  bootJar
-# run-local: build
-# 	java -jar build/libs/service-a-*.jar
-
 #===================  docker  ===========================
 docker-build: build
 	docker build -t timnuwa/clientservice:latest .
@@ -113,9 +98,9 @@ k8s-info:
 
 
 
-k8s-all-create: k8s-configmap-create k8s-secrets-create k8s-role-create k8s-deployment-create k8s-service-create
+k8s-all-create: k8s-configmap-create k8s-secrets-create k8s-deployment-create k8s-service-create
 	echo "Done"
-k8s-all-delete: k8s-configmap-delete k8s-secrets-delete k8s-persistence-delete k8s-deployment-delete k8s-service-delete
+k8s-all-delete: k8s-configmap-delete k8s-secrets-delete k8s-deployment-delete k8s-service-delete
 	echo "Done"
 
 
