--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/payment?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://ecommerce-app-mysql/payment?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=mysql
 server.port=8094
