--- a/PaypalService/k8s-service.yaml
+++ b/PaypalService/k8s-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: authservice
+  name: paypalservice
 spec:
   type: NodePort
   selector:
-    app: authservice
+    app: paypalservice
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: 8097
