--- a/ProductService/k8s-deployment.yaml
+++ b/ProductService/k8s-deployment.yaml
@@ -1,44 +1,44 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: authservice-deployment
+  name: productservice-deployment
   labels:
-    app: authservice
+    app: productservice
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: authservice
+      app: productservice
   template:
     metadata:
       labels:
-        app: authservice
+        app: productservice
 
     spec:
       containers:
-        - name: authservice
-          image: timnuwa/authservice:latest
+        - name: productservice
+          image: timnuwa/productservice:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 8092
           env:
             - name: KEY1
               valueFrom:
                 configMapKeyRef:
-                  name: authservice-config
+                  name: productservice-config
                   key: someKey1
             - name: NEXT_SERVICE
               valueFrom:
                 configMapKeyRef:
-                  name: authservice-config
+                  name: productservice-config
                   key: nextService
             - name: SERVICE_API_KEY
               valueFrom:
                 secretKeyRef:
-                  name: authservice-secrets
+                  name: productservice-secrets
                   key: service-api-key
             #MYSQL
             - name: MYSQL_HOST
-              value: authservice-db
+              value: productservice-db
 
             - name: MYSQL_USER
               value: root
@@ -48,5 +48,5 @@ spec:
             - name: MYSQL_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: authservice-secrets
+                  name: productservice-secrets
                   key: mysql-root-password
