--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/product?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://ecommerce-app-mysql/product?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=mysql
 server.port=8092
