--- a/UserService/k8s-deployment.yaml
+++ b/UserService/k8s-deployment.yaml
@@ -1,44 +1,44 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: authservice-deployment
+  name: userservice-deployment
   labels:
-    app: authservice
+    app: userservice
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: authservice
+      app: userservice
   template:
     metadata:
       labels:
-        app: authservice
+        app: userservice
 
     spec:
       containers:
-        - name: authservice
-          image: timnuwa/authservice:latest
+        - name: userservice
+          image: timnuwa/userservice:latest
           ports:
             - containerPort: 8080
           env:
             - name: KEY1
               valueFrom:
                 configMapKeyRef:
-                  name: authservice-config
+                  name: userservice-config
                   key: someKey1
             - name: NEXT_SERVICE
               valueFrom:
                 configMapKeyRef:
-                  name: authservice-config
+                  name: userservice-config
                   key: nextService
             - name: SERVICE_API_KEY
               valueFrom:
                 secretKeyRef:
-                  name: authservice-secrets
+                  name: userservice-secrets
                   key: service-api-key
             #MYSQL
             - name: MYSQL_HOST
-              value: authservice-db
+              value: userservice-db
 
             - name: MYSQL_USER
               value: root
@@ -48,5 +48,5 @@ spec:
             - name: MYSQL_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: authservice-secrets
+                  name: userservice-secrets
                   key: mysql-root-password
