--- a/UserService/k8s-persistence-database.yaml
+++ b/UserService/k8s-persistence-database.yaml
@@ -1,51 +1,51 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: authservice-db
+  name: userservice-db
 spec:
   ports:
     - protocol: TCP
       port: 8085
       targetPort: auth-db-port
   selector:
-    app: authservice-db
+    app: userservice-db
     tier: db
   clusterIP: None
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: authservice-db
+  name: userservice-db
 spec:
   selector:
     matchLabels:
-      app: authservice-db
+      app: userservice-db
       tier: db
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: authservice-db
+        app: userservice-db
         tier: db
     spec:
       containers:
         - image: mysql:5.6
-          name: authservice-db
+          name: userservice-db
           env:
             # Use secret in real usage
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: authservice-secrets
+                  name: userservice-secrets
                   key: mysql-root-password
           ports:
             - containerPort: 3306
               name: auth-db-port
           volumeMounts:
-            - name: authservice-db-persistent-storage
+            - name: userservice-db-persistent-storage
               mountPath: /var/lib/mysql
       volumes:
-        - name: authservice-db-persistent-storage
+        - name: userservice-db-persistent-storage
           persistentVolumeClaim:
-            claimName: authservice-pv-claim
+            claimName: userservice-pv-claim
