--- a/UserService/k8s-service.yaml
+++ b/UserService/k8s-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: authservice
+  name: userservice
 spec:
   type: NodePort
   selector:
-    app: authservice
+    app: userservice
   ports:
     - protocol: TCP
       port: 80
