--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/shipment?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://ecommerce-app-mysql/shipment?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 server.port=8098
