--- a/AuthService/k8s-config-map.yaml
+++ b/AuthService/k8s-config-map.yaml
@@ -7,3 +7,4 @@ data:
   #reference: https://cloud.spring.io/spring-cloud-static/spring-cloud-kubernetes/1.1.0.RC1/reference/html/#kubernetes-native-service-discovery
 
   nextService: authservice.default.svc.cluster.local:8084
+  userService: userservice.default.svc.cluster.local:8091
