--- a/AuthService/k8s-deployment.yaml
+++ b/AuthService/k8s-deployment.yaml
@@ -41,3 +41,8 @@ spec:
                 configMapKeyRef:
                   name: authservice-config
                   key: userService
+            - name: USER_SERVICE_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: authservice-config
+                  key: userServicePort
