--- a/client/k8s-config-map.yaml
+++ b/client/k8s-config-map.yaml
@@ -7,3 +7,9 @@ data:
   #reference: https://cloud.spring.io/spring-cloud-static/spring-cloud-kubernetes/1.1.0.RC1/reference/html/#kubernetes-native-service-discovery
 
   nextService: clientservice.default.svc.cluster.local:8084
+  authURL: "35.193.244.58"
+  cartservice: cartservice.default.svc.cluster.local
+  productservice: productservice.default.svc.cluster.local
+  paymentservice: paymentservice.default.svc.cluster.local
+  orderService: orderservice.default.svc.cluster.local
+  userService: userservice.default.svc.cluster.local
