--- a/client/k8s-deployment.yaml
+++ b/client/k8s-deployment.yaml
@@ -62,3 +62,8 @@ spec:
                 secretKeyRef:
                   name: clientservice-secrets
                   key: service-api-key
+            - name: IMANA
+              valueFrom:
+                secretKeyRef:
+                  name: clientservice-secrets
+                  key: timo
